Fixed bunting top spacing

--- a/css/less/custom/navigation.less
+++ b/css/less/custom/navigation.less
@@ -201,19 +201,19 @@ SITE NAVIGATION
 		}
 		
 		.colour-2 {
-			border-top: ( @bunting-height - 0.01 ) solid @brand-color-2;
+			border-top: @bunting-height solid @brand-color-2;
 		}
 		
 		.colour-3 {
-			border-top: ( @bunting-height - 0.04 ) solid @brand-color-3;
+			border-top: @bunting-height solid @brand-color-3;
 		}
 		
 		.colour-4 {
-			border-top: ( @bunting-height - 0.02 ) solid @brand-color-4;
+			border-top: @bunting-height solid @brand-color-4;
 		}
 		
 		.colour-5 {
-			border-top: ( @bunting-height - 0.03 ) solid @brand-color-5;
+			border-top: @bunting-height solid @brand-color-5;
 		}
 		
 		.dot {
